--- a/styles.css
+++ b/styles.css
@@ -88,3 +88,20 @@ body {
   font-weight: 700;
   text-decoration: none;
 }
+
+.caraousel-container {
+  position: relative;
+  width: 100%;
+  height: 450px;
+  padding: 20px 0;
+  overflow-x: hidden;
+  margin-top: 80px;
+}
+
+.caraousel {
+  display: flex;
+  width: 92%;
+  height: 100%;
+  position: relative;
+  margin: auto;
+}
