--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ body {
   text-decoration: none;
 }
 
-.carousel-container {
+.caraousel-container {
   position: relative;
   width: 100%;
   height: 450px;
